// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`POST /api/datasets/upload > csv dataset uploading 1`] = `
{
  "columns": [
    {
      "data_type": "number",
      "display_name": "id",
      "key": "id",
      "order_index": 0,
    },
    {
      "data_type": "string",
      "display_name": "name",
      "key": "name",
      "order_index": 1,
    },
    {
      "data_type": "number",
      "display_name": "age",
      "key": "age",
      "order_index": 2,
    },
    {
      "data_type": "bool",
      "display_name": "active",
      "key": "active",
      "order_index": 3,
    },
    {
      "data_type": "string",
      "display_name": "city",
      "key": "city",
      "order_index": 4,
    },
    {
      "data_type": "string",
      "display_name": "country",
      "key": "country",
      "order_index": 5,
    },
    {
      "data_type": "number",
      "display_name": "score",
      "key": "score",
      "order_index": 6,
    },
    {
      "data_type": "date",
      "display_name": "signupDate",
      "key": "signupDate",
      "order_index": 7,
    },
  ],
  "dataset": {
    "name": "datasetBasic",
    "sourceType": "csv",
  },
  "rows": [
    {
      "data": {
        "active": "true",
        "age": "30",
        "city": "Paris",
        "country": "France",
        "id": "1",
        "name": "Alice Johnson",
        "score": "91",
        "signupDate": "2024-01-10",
      },
      "rowIndex": 0,
    },
    {
      "data": {
        "active": "false",
        "age": "25",
        "city": "Berlin",
        "country": "Germany",
        "id": "2",
        "name": "Bob Smith",
        "score": "84",
        "signupDate": "2024-01-11",
      },
      "rowIndex": 1,
    },
    {
      "data": {
        "active": "true",
        "age": "41",
        "city": "Madrid",
        "country": "Spain",
        "id": "3",
        "name": "Charlie Brown",
        "score": "88",
        "signupDate": "2024-01-12",
      },
      "rowIndex": 2,
    },
    {
      "data": {
        "active": "true",
        "age": "29",
        "city": "Rome",
        "country": "Italy",
        "id": "4",
        "name": "Diana Prince",
        "score": "95",
        "signupDate": "2024-01-13",
      },
      "rowIndex": 3,
    },
    {
      "data": {
        "active": "false",
        "age": "35",
        "city": "Prague",
        "country": "Czechia",
        "id": "5",
        "name": "Ethan Clark",
        "score": "73",
        "signupDate": "2024-01-14",
      },
      "rowIndex": 4,
    },
    {
      "data": {
        "active": "true",
        "age": "27",
        "city": "Vienna",
        "country": "Austria",
        "id": "6",
        "name": "Fiona Green",
        "score": "89",
        "signupDate": "2024-01-15",
      },
      "rowIndex": 5,
    },
    {
      "data": {
        "active": "true",
        "age": "33",
        "city": "Warsaw",
        "country": "Poland",
        "id": "7",
        "name": "George Hall",
        "score": "90",
        "signupDate": "2024-01-16",
      },
      "rowIndex": 6,
    },
    {
      "data": {
        "active": "false",
        "age": "22",
        "city": "Oslo",
        "country": "Norway",
        "id": "8",
        "name": "Helen Scott",
        "score": "77",
        "signupDate": "2024-01-17",
      },
      "rowIndex": 7,
    },
    {
      "data": {
        "active": "true",
        "age": "38",
        "city": "Stockholm",
        "country": "Sweden",
        "id": "9",
        "name": "Ian Lewis",
        "score": "86",
        "signupDate": "2024-01-18",
      },
      "rowIndex": 8,
    },
    {
      "data": {
        "active": "true",
        "age": "31",
        "city": "Helsinki",
        "country": "Finland",
        "id": "10",
        "name": "Julia Adams",
        "score": "92",
        "signupDate": "2024-01-19",
      },
      "rowIndex": 9,
    },
    {
      "data": {
        "active": "false",
        "age": "28",
        "city": "Dublin",
        "country": "Ireland",
        "id": "11",
        "name": "Kevin Turner",
        "score": "81",
        "signupDate": "2024-01-20",
      },
      "rowIndex": 10,
    },
    {
      "data": {
        "active": "true",
        "age": "26",
        "city": "Brussels",
        "country": "Belgium",
        "id": "12",
        "name": "Laura King",
        "score": "87",
        "signupDate": "2024-01-21",
      },
      "rowIndex": 11,
    },
    {
      "data": {
        "active": "true",
        "age": "44",
        "city": "Amsterdam",
        "country": "Netherlands",
        "id": "13",
        "name": "Michael Young",
        "score": "94",
        "signupDate": "2024-01-22",
      },
      "rowIndex": 12,
    },
    {
      "data": {
        "active": "false",
        "age": "24",
        "city": "Lisbon",
        "country": "Portugal",
        "id": "14",
        "name": "Nina Baker",
        "score": "76",
        "signupDate": "2024-01-23",
      },
      "rowIndex": 13,
    },
    {
      "data": {
        "active": "true",
        "age": "36",
        "city": "Copenhagen",
        "country": "Denmark",
        "id": "15",
        "name": "Oliver Wright",
        "score": "85",
        "signupDate": "2024-01-24",
      },
      "rowIndex": 14,
    },
    {
      "data": {
        "active": "true",
        "age": "32",
        "city": "Zurich",
        "country": "Switzerland",
        "id": "16",
        "name": "Paula Hill",
        "score": "93",
        "signupDate": "2024-01-25",
      },
      "rowIndex": 15,
    },
    {
      "data": {
        "active": "false",
        "age": "40",
        "city": "Budapest",
        "country": "Hungary",
        "id": "17",
        "name": "Quentin Reed",
        "score": "79",
        "signupDate": "2024-01-26",
      },
      "rowIndex": 16,
    },
    {
      "data": {
        "active": "true",
        "age": "23",
        "city": "Athens",
        "country": "Greece",
        "id": "18",
        "name": "Rachel Cook",
        "score": "82",
        "signupDate": "2024-01-27",
      },
      "rowIndex": 17,
    },
    {
      "data": {
        "active": "true",
        "age": "37",
        "city": "Sofia",
        "country": "Bulgaria",
        "id": "19",
        "name": "Samuel Bell",
        "score": "88",
        "signupDate": "2024-01-28",
      },
      "rowIndex": 18,
    },
    {
      "data": {
        "active": "false",
        "age": "29",
        "city": "Zagreb",
        "country": "Croatia",
        "id": "20",
        "name": "Tina Ross",
        "score": "80",
        "signupDate": "2024-01-29",
      },
      "rowIndex": 19,
    },
    {
      "data": {
        "active": "true",
        "age": "34",
        "city": "Tallinn",
        "country": "Estonia",
        "id": "21",
        "name": "Uma Price",
        "score": "91",
        "signupDate": "2024-01-30",
      },
      "rowIndex": 20,
    },
    {
      "data": {
        "active": "true",
        "age": "39",
        "city": "Riga",
        "country": "Latvia",
        "id": "22",
        "name": "Victor Cox",
        "score": "83",
        "signupDate": "2024-01-31",
      },
      "rowIndex": 21,
    },
  ],
}
`;

exports[`POST /api/datasets/upload > handles five uploads concurrently and stores every dataset completely 1`] = `
{
  "columnsCount": 40,
  "datasets": [
    {
      "name": "datasetBasic",
      "sourceType": "csv",
    },
    {
      "name": "datasetBasic",
      "sourceType": "csv",
    },
    {
      "name": "datasetBasic",
      "sourceType": "xlsx",
    },
    {
      "name": "datasetMultiSheet",
      "sourceType": "xlsx",
    },
    {
      "name": "datasetWithWhitespace",
      "sourceType": "csv",
    },
  ],
  "rowsCount": 110,
  "rowsPerDataset": [
    22,
    22,
    22,
    22,
    22,
  ],
}
`;

exports[`POST /api/datasets/upload > uploads xlsx dataset and persists typed row values 1`] = `
{
  "columns": [
    {
      "data_type": "number",
      "display_name": "id",
      "key": "id",
      "order_index": 0,
    },
    {
      "data_type": "string",
      "display_name": "name",
      "key": "name",
      "order_index": 1,
    },
    {
      "data_type": "number",
      "display_name": "age",
      "key": "age",
      "order_index": 2,
    },
    {
      "data_type": "bool",
      "display_name": "active",
      "key": "active",
      "order_index": 3,
    },
    {
      "data_type": "string",
      "display_name": "city",
      "key": "city",
      "order_index": 4,
    },
    {
      "data_type": "string",
      "display_name": "country",
      "key": "country",
      "order_index": 5,
    },
    {
      "data_type": "number",
      "display_name": "score",
      "key": "score",
      "order_index": 6,
    },
    {
      "data_type": "date",
      "display_name": "signupDate",
      "key": "signupDate",
      "order_index": 7,
    },
  ],
  "dataset": {
    "name": "datasetBasic",
    "sourceType": "xlsx",
  },
  "rows": [
    {
      "data": {
        "active": true,
        "age": 30,
        "city": "Paris",
        "country": "France",
        "id": 1,
        "name": "Alice Johnson",
        "score": 91,
        "signupDate": "2024-01-10",
      },
      "rowIndex": 0,
    },
    {
      "data": {
        "active": false,
        "age": 25,
        "city": "Berlin",
        "country": "Germany",
        "id": 2,
        "name": "Bob Smith",
        "score": 84,
        "signupDate": "2024-01-11",
      },
      "rowIndex": 1,
    },
    {
      "data": {
        "active": true,
        "age": 41,
        "city": "Madrid",
        "country": "Spain",
        "id": 3,
        "name": "Charlie Brown",
        "score": 88,
        "signupDate": "2024-01-12",
      },
      "rowIndex": 2,
    },
    {
      "data": {
        "active": true,
        "age": 29,
        "city": "Rome",
        "country": "Italy",
        "id": 4,
        "name": "Diana Prince",
        "score": 95,
        "signupDate": "2024-01-13",
      },
      "rowIndex": 3,
    },
    {
      "data": {
        "active": false,
        "age": 35,
        "city": "Prague",
        "country": "Czechia",
        "id": 5,
        "name": "Ethan Clark",
        "score": 73,
        "signupDate": "2024-01-14",
      },
      "rowIndex": 4,
    },
    {
      "data": {
        "active": true,
        "age": 27,
        "city": "Vienna",
        "country": "Austria",
        "id": 6,
        "name": "Fiona Green",
        "score": 89,
        "signupDate": "2024-01-15",
      },
      "rowIndex": 5,
    },
    {
      "data": {
        "active": true,
        "age": 33,
        "city": "Warsaw",
        "country": "Poland",
        "id": 7,
        "name": "George Hall",
        "score": 90,
        "signupDate": "2024-01-16",
      },
      "rowIndex": 6,
    },
    {
      "data": {
        "active": false,
        "age": 22,
        "city": "Oslo",
        "country": "Norway",
        "id": 8,
        "name": "Helen Scott",
        "score": 77,
        "signupDate": "2024-01-17",
      },
      "rowIndex": 7,
    },
    {
      "data": {
        "active": true,
        "age": 38,
        "city": "Stockholm",
        "country": "Sweden",
        "id": 9,
        "name": "Ian Lewis",
        "score": 86,
        "signupDate": "2024-01-18",
      },
      "rowIndex": 8,
    },
    {
      "data": {
        "active": true,
        "age": 31,
        "city": "Helsinki",
        "country": "Finland",
        "id": 10,
        "name": "Julia Adams",
        "score": 92,
        "signupDate": "2024-01-19",
      },
      "rowIndex": 9,
    },
    {
      "data": {
        "active": false,
        "age": 28,
        "city": "Dublin",
        "country": "Ireland",
        "id": 11,
        "name": "Kevin Turner",
        "score": 81,
        "signupDate": "2024-01-20",
      },
      "rowIndex": 10,
    },
    {
      "data": {
        "active": true,
        "age": 26,
        "city": "Brussels",
        "country": "Belgium",
        "id": 12,
        "name": "Laura King",
        "score": 87,
        "signupDate": "2024-01-21",
      },
      "rowIndex": 11,
    },
    {
      "data": {
        "active": true,
        "age": 44,
        "city": "Amsterdam",
        "country": "Netherlands",
        "id": 13,
        "name": "Michael Young",
        "score": 94,
        "signupDate": "2024-01-22",
      },
      "rowIndex": 12,
    },
    {
      "data": {
        "active": false,
        "age": 24,
        "city": "Lisbon",
        "country": "Portugal",
        "id": 14,
        "name": "Nina Baker",
        "score": 76,
        "signupDate": "2024-01-23",
      },
      "rowIndex": 13,
    },
    {
      "data": {
        "active": true,
        "age": 36,
        "city": "Copenhagen",
        "country": "Denmark",
        "id": 15,
        "name": "Oliver Wright",
        "score": 85,
        "signupDate": "2024-01-24",
      },
      "rowIndex": 14,
    },
    {
      "data": {
        "active": true,
        "age": 32,
        "city": "Zurich",
        "country": "Switzerland",
        "id": 16,
        "name": "Paula Hill",
        "score": 93,
        "signupDate": "2024-01-25",
      },
      "rowIndex": 15,
    },
    {
      "data": {
        "active": false,
        "age": 40,
        "city": "Budapest",
        "country": "Hungary",
        "id": 17,
        "name": "Quentin Reed",
        "score": 79,
        "signupDate": "2024-01-26",
      },
      "rowIndex": 16,
    },
    {
      "data": {
        "active": true,
        "age": 23,
        "city": "Athens",
        "country": "Greece",
        "id": 18,
        "name": "Rachel Cook",
        "score": 82,
        "signupDate": "2024-01-27",
      },
      "rowIndex": 17,
    },
    {
      "data": {
        "active": true,
        "age": 37,
        "city": "Sofia",
        "country": "Bulgaria",
        "id": 19,
        "name": "Samuel Bell",
        "score": 88,
        "signupDate": "2024-01-28",
      },
      "rowIndex": 18,
    },
    {
      "data": {
        "active": false,
        "age": 29,
        "city": "Zagreb",
        "country": "Croatia",
        "id": 20,
        "name": "Tina Ross",
        "score": 80,
        "signupDate": "2024-01-29",
      },
      "rowIndex": 19,
    },
    {
      "data": {
        "active": true,
        "age": 34,
        "city": "Tallinn",
        "country": "Estonia",
        "id": 21,
        "name": "Uma Price",
        "score": 91,
        "signupDate": "2024-01-30",
      },
      "rowIndex": 20,
    },
    {
      "data": {
        "active": true,
        "age": 39,
        "city": "Riga",
        "country": "Latvia",
        "id": 22,
        "name": "Victor Cox",
        "score": 83,
        "signupDate": "2024-01-31",
      },
      "rowIndex": 21,
    },
  ],
}
`;
